fix: :art: fix gap pokemon detail

--- a/src/pages/pokemon/pokemon-detail.module.css
+++ b/src/pages/pokemon/pokemon-detail.module.css
@@ -22,7 +22,6 @@
 .container {
 	display: flex;
 	flex-wrap: wrap;
-	gap: 2rem;
 	justify-content: space-evenly;
 
 	@media screen and (max-width: 1024px) {
